--- a/Mazad_Listing.html
+++ b/Mazad_Listing.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+ 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -259,13 +259,155 @@
         <!-- ==============================Navbar End==============================-->
     </header>
     <!-- ============================== product detail start==============================-->
+    <style type="text/css">
+.picZoomer {
+  position: relative;
+  /*margin-left: 40px;
+    padding: 15px;*/
+}
+.picZoomer-pic-wp {
+  position: relative;
+  overflow: hidden;
+  text-align: center;
+}
+.picZoomer-pic-wp:hover .picZoomer-cursor {
+  display: block;
+}
+.picZoomer-zoom-pic {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.picZoomer-pic {
+  /*width: 100%;
+    height: 100%;*/
+}
+.picZoomer-zoom-wp {
+  display: none;
+  position: absolute;
+  z-index: 999;
+  overflow: hidden;
+  border: 1px solid #eee;
+  height: 460px;
+  margin-top: -19px;
+}
+.picZoomer-cursor {
+  display: none;
+  cursor: crosshair;
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 50%;
+  border: 1px solid #eee;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+.picZoomCursor-ico {
+  width: 23px;
+  height: 23px;
+  position: absolute;
+  top: 40px;
+  left: 40px;
+  background: url(images/zoom-ico.png) left top no-repeat;
+}
+
+.my_img {
+  vertical-align: middle;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  height: 100%;
+}
+.piclist li {
+  display: inline-block;
+  width: 90px;
+  height: 114px;
+  border: 1px solid #eee;
+}
+.piclist li img {
+  width: 97%;
+  height: auto;
+}
+
+/* custom style */
+.picZoomer-pic-wp,
+.picZoomer-zoom-wp {
+  border: 1px solid #eee;
+}
+
+.section-bg {
+  background-color: #fff1e0;
+}
+section {
+  padding: 60px 0;
+}
+.row-sm .col-md-6 {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+/*===pic-Zoom===*/
+._boxzoom .zoom-thumb {
+  width: 90px;
+  display: inline-block;
+  vertical-align: top;
+  margin-top: 0px;
+}
+._boxzoom .zoom-thumb ul.piclist {
+  padding-left: 0px;
+  top: 0px;
+}
+._boxzoom ._product-images {
+  width: 80%;
+  display: inline-block;
+}
+._boxzoom ._product-images .picZoomer {
+  width: 100%;
+}
+._boxzoom ._product-images .picZoomer .picZoomer-pic-wp img {
+  left: 0px;
+}
+._boxzoom ._product-images .picZoomer img.my_img {
+  width: 100%;
+}
+.piclist li img {
+  height: 100px;
+  object-fit: cover;
+}
+
+@media (max-width: 767px) { /* Adjust the maximum width as needed */
+    ._boxzoom {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .zoom-thumb {
+        order: 2;
+    }
+
+    ._product-images {
+        order: 1;
+    }
+
+    ._boxzoom .zoom-thumb {
+        width: 100%;
+      vertical-align: top;
+      margin-top: 0px;
+    }
+
+}
+
+
+</style>
     <section class="product_detail">
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-6 col-lg-6 col-12">
-                    <div class="slider-wrapper">
-                        <ul class="slider-thumb">
-                            <li class="thumb_image img-fluid"><img src="assets/images/main/shot-1.png" alt="" width="96"
+            <div class="row row-sm">
+                <div class="col-md-6 _boxzoom">
+                    <div class="zoom-thumb">
+                       <ul class="piclist">
+                          <li class="thumb_image img-fluid"><img src="assets/images/main/shot-1.png" alt="" width="96"
                                     height="96"></li>
                             <li class="thumb_image img-fluid"><img src="assets/images/main/shot-2.png" alt="" width="96"
                                     height="96">
@@ -273,30 +415,17 @@
                             <li class="thumb_image img-fluid"><img src="assets/images/main/shot-3.png" alt="" width="96"
                                     height="96">
                             </li>
-                            <li class="thumb_image img-fluid"><img src="assets/images/main/shot-4.png" alt="" width="96"
-                                    height="96"></li>
                             <li class="thumb_image img-fluid"><img src="assets/images/main/shot-5.png" alt="" width="96"
                                     height="96">
                             </li>
-                        </ul>
-
-                        <ul class="slider-preview">
-                            <li class="preview_image img-fluid"><img src="assets/images/main/shot-1.png" alt=""
-                                    width="553" height="553"></li>
-                            <li class="preview_image img-fluid"><img src="assets/images/main/shot-2.png" alt=""
-                                    width="553" height="553">
-                            </li>
-                            <li class="preview_image img-fluid"><img src="assets/images/main/shot-3.png" alt=""
-                                    width="553" height="553">
-                            </li>
-                            <li class="preview_image img-fluid"><img src="assets/images/main/shot-4.png" alt=""
-                                    width="553" height="553"></li>
-                            <li class="preview_image img-fluid"><img src="assets/images/main/shot-5.png" alt=""
-                                    width="553" height="553">
-                            </li>
-                        </ul>
+                       </ul>
                     </div>
-                </div>
+                    <div class="_product-images">
+                       <div class="picZoomer">
+                          <img class="my_img" src="assets/images/main/shot-1.png" alt="">
+                       </div>
+                    </div>
+                 </div>
 
                 <style>
                     /* START MODULE STYLING */
@@ -352,7 +481,7 @@
                     }
                 </style>
 
-                <div class="col-md-6 col-lg-6 col-12">
+                <div class="col-md-6">
                     <div class="row">
                         <div class="col-12 pt-2">
                             <div class="d-flex justify-content-between align-items-center">
@@ -771,6 +900,93 @@
     <script src="assets/bootstrap/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
     <script src="assets/js/main.js"></script>
+
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+
+
+<script type="text/javascript">
+(function ($) {
+  $.fn.picZoomer = function (options) {
+    var opts = $.extend({}, $.fn.picZoomer.defaults, options),
+      $this = this,
+      $picBD = $('<div class="picZoomer-pic-wp"></div>')
+        .css({ width: opts.picWidth + "px", height: opts.picHeight + "px" })
+        .appendTo($this),
+      $pic = $this.children("img").addClass("picZoomer-pic").appendTo($picBD),
+      $cursor = $(
+        '<div class="picZoomer-cursor"><i class="f-is picZoomCursor-ico"></i></div>'
+      ).appendTo($picBD),
+      cursorSizeHalf = { w: $cursor.width() / 2, h: $cursor.height() / 2 },
+      $zoomWP = $(
+        '<div class="picZoomer-zoom-wp"><img src="" alt="" class="picZoomer-zoom-pic"></div>'
+      ).appendTo($this),
+      $zoomPic = $zoomWP.find(".picZoomer-zoom-pic"),
+      picBDOffset = { x: $picBD.offset().left, y: $picBD.offset().top };
+
+    opts.zoomWidth = opts.zoomWidth || opts.picWidth;
+    opts.zoomHeight = opts.zoomHeight || opts.picHeight;
+    var zoomWPSizeHalf = { w: opts.zoomWidth / 2, h: opts.zoomHeight / 2 };
+
+    //初始化zoom容器大小
+    $zoomWP.css({
+      width: opts.zoomWidth + "px",
+      height: opts.zoomHeight + "px"
+    });
+    $zoomWP.css(
+      opts.zoomerPosition || { top: 0, left: opts.picWidth + 30 + "px" }
+    );
+    //初始化zoom图片大小
+    $zoomPic.css({
+      width: opts.picWidth * opts.scale + "px",
+      height: opts.picHeight * opts.scale + "px"
+    });
+
+    //初始化事件
+    $picBD
+      .on("mouseenter", function (event) {
+        $cursor.show();
+        $zoomWP.show();
+        $zoomPic.attr("src", $pic.attr("src"));
+      })
+      .on("mouseleave", function (event) {
+        $cursor.hide();
+        $zoomWP.hide();
+      })
+      .on("mousemove", function (event) {
+        var x = event.pageX - picBDOffset.x,
+          y = event.pageY - picBDOffset.y;
+
+        $cursor.css({
+          left: x - cursorSizeHalf.w + "px",
+          top: y - cursorSizeHalf.h + "px"
+        });
+        $zoomPic.css({
+          left: -(x * opts.scale - zoomWPSizeHalf.w) + "px",
+          top: -(y * opts.scale - zoomWPSizeHalf.h) + "px"
+        });
+      });
+    return $this;
+  };
+  $.fn.picZoomer.defaults = {
+    picHeight: 460,
+    scale: 2.5,
+    zoomerPosition: { top: "0", left: "380px" },
+
+    zoomWidth: 400,
+    zoomHeight: 460
+  };
+})(jQuery);
+
+$(document).ready(function () {
+  $(".picZoomer").picZoomer();
+  $(".piclist li").on("click", function (event) {
+    var $pic = $(this).find("img");
+    $(".picZoomer-pic").attr("src", $pic.attr("src"));
+  });
+});
+
+    </script>
 </body>
 
 
