--- a/index.html
+++ b/index.html
@@ -36,9 +36,13 @@
                             <li><a class="dropdown-item" href="#">Profile</a></li>
                             <li><a class="dropdown-item" href="#">Settings</a></li>
                             <li><a class="dropdown-item" href="filtersearch.html">Filter Search</a></li>
-                            <li><a class="dropdown-item" href="Mazad_Listing.html">Mazad Listing</a></li>
+                            <li><a class="dropdown-item" href="mazad_listing.html">Mazad Listing</a></li>
                             <li><a class="dropdown-item" href="page_other_auctions.html">Other Auctions</a></li>
-                            <li><a class="dropdown-item" href="Chat.html">Chat</a></li>
+                            <li><a class="dropdown-item" href="chat.html">Chat</a></li>
+                            <li><a class="dropdown-item" href="mazad_about.html">Mazad About</a></li>
+                            <li><a class="dropdown-item" href="agreement.html">Agreement</a></li>
+                            <li><a class="dropdown-item" href="terms&cond.html">Terms&Cond</a></li>
+                            <li><a class="dropdown-item" href="services.html">Services</a></li>
                             <li><a class="dropdown-item" href="login.html">Login</a></li>
                             <li><a class="dropdown-item" href="signup.html">Signup</a></li>
                             <li class="d-inline-flex gap-3 ps-3 w-100"><label class="form-check-label"
@@ -89,7 +93,8 @@
         </div>
         <!-- ==============================Topbar End==============================-->
         <!-- ==============================Navbar Start==============================-->
-        <div class="container-fluid px-0 px-lg-5">
+        <div class="container-fluid px-0 px-lg-5"
+            style="box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;">
             <nav class="navbar navbar-expand-lg bottom_bar">
                 <a href="index.html" class="navbar-brand branding ps-lg-0 ps-2">
                     <img src="assets/images/logo/logo.png" alt="logo">
