--- a/services.html
+++ b/services.html
@@ -265,6 +265,53 @@
         </div>
         <!-- ==============================Navbar End==============================-->
     </header>
+
+    <!-- ==============================Services Start==============================-->
+    <section class="about_heading">
+        <div class="container">
+            <div class="px-2 about d-none d-md-block">
+                <h1 class="pt-5 pb-3">Services</h1>
+            </div>
+            <div class="service_content py-5">
+                <a href="#">
+                    <h4>Item Authentication:</h4>
+                </a>
+                <p>We ensure the authenticity of every luxury item listed on our platform through expert verification.
+                </p>
+                <a href="#">
+                    <h4>Professional Valuation:</h4>
+                </a>
+                <p>Get a professional appraisal and valuation for your luxury watches, pens, bags, and jewelry to
+                    understand their true
+                    worth.
+                </p>
+                <a href="#">
+                    <h4>Seller Assistance:</h4>
+                </a>
+                <p>Our experts can help you create compelling listings with accurate descriptions, improving your
+                    chances of successful
+                    sales.
+                </p>
+                <a href="#">
+                    <h4>Buyer's Consultation:</h4>
+                </a>
+                <p>Receive expert guidance when choosing the perfect luxury item to match your style and preferences.
+                </p>
+                <a href="#">
+                    <h4>Secure Messaging:</h4>
+                </a>
+                <p>Communicate with buyers and sellers securely through our platform, ensuring your conversations are
+                    private.
+                </p>
+                <a href="#">
+                    <h4>Customer Support:</h4>
+                </a>
+                <p>Our responsive support team is ready to assist you with any questions or concerns.
+                </p>
+            </div>
+        </div>
+    </section>
+    <!-- ==============================Services End==============================-->
     <!-- =============================Contact Us Start==============================-->
     <section class="contact_wrapper py-4 my-3">
         <div class="container">
@@ -347,8 +394,10 @@
     <section class="footer_block">
         <div class="footer_block_btn">
             <ul>
-                <li class="list-unstyled mb-3"><a href="#" target="_blank" rel="noopener noreferrer">CONTACT US</a></li>
-                <li class="list-unstyled mb-3"><a href="#" target="_blank" rel="noopener noreferrer">TERMS & CONDITIONS
+                <li class="list-unstyled mb-3"><a href="#" target="_blank" rel="noopener noreferrer">CONTACT US</a>
+                </li>
+                <li class="list-unstyled mb-3"><a href="#" target="_blank" rel="noopener noreferrer">TERMS &
+                        CONDITIONS
                         / PRIVACY POLICY</a>
                 </li>
                 <li class="list-unstyled mb-3"><a href="#" target="_blank" rel="noopener noreferrer">LANGUAGE</a>
