--- a/agreement.html
+++ b/agreement.html
@@ -265,6 +265,41 @@
         </div>
         <!-- ==============================Navbar End==============================-->
     </header>
+    <!-- ==============================Services Start==============================-->
+    <section class="about_heading">
+        <div class="container">
+            <div class="px-2 about d-none d-md-block">
+                <h1 class="pt-5 pb-3">اتفاقية الرسوم</h1>
+            </div>
+            <div class="agreemint_point py-5" dir="rtl">
+                <ul class="pe-4">
+                    <h4>اتعهد واقسم بالله انا المعلن ان ادفع رسوم الموقع وهي:</h4>
+                    <li class="list-unstyled">
+                        <p class="ps-2 mb-0">
+                            من: 1,000 الى 10,000 الاف ريال مبلغ: 200 ريال
+                        </p>
+                    </li>
+                    <li class="list-unstyled">
+                        <p class="ps-2 mb-0">
+                            من: 10,000 الى 50,000 ألف ريال مبلغ: 500 ريال
+                        </p>
+                    </li>
+                    <li class="list-unstyled">
+                        <p class="ps-2 mb-0">
+                            من: 50,000 الى 100,000 ألف ريال مبلغ: 1000 ريال
+                        </p>
+                    </li>
+                    <li class="list-unstyled">
+                        <p class="ps-2 mb-0">
+                            من 100,000 ريال وما فوق الرجاء التواصل معنا عبر الواتس اب او انستغرام
+                        </p>
+                    </li>
+                </ul>
+                <p>ملاحظة: رسوم الدفع هي على المعلن ولا تبرأ ذمة المعلن من الرسوم الى في حال دفعها.</p>
+                <p>ملاحظة: سوف يتم الغاء واقفال حساب المعلن ان لم يدفع الرسوم!!</p>
+            </div>
+        </div>
+    </section>
     <!-- =============================Contact Us Start==============================-->
     <section class="contact_wrapper py-4 my-3">
         <div class="container">
@@ -347,8 +382,10 @@
     <section class="footer_block">
         <div class="footer_block_btn">
             <ul>
-                <li class="list-unstyled mb-3"><a href="#" target="_blank" rel="noopener noreferrer">CONTACT US</a></li>
-                <li class="list-unstyled mb-3"><a href="#" target="_blank" rel="noopener noreferrer">TERMS & CONDITIONS
+                <li class="list-unstyled mb-3"><a href="#" target="_blank" rel="noopener noreferrer">CONTACT US</a>
+                </li>
+                <li class="list-unstyled mb-3"><a href="#" target="_blank" rel="noopener noreferrer">TERMS &
+                        CONDITIONS
                         / PRIVACY POLICY</a>
                 </li>
                 <li class="list-unstyled mb-3"><a href="#" target="_blank" rel="noopener noreferrer">LANGUAGE</a>
