--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             style="box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;">
             <nav class="navbar navbar-expand-lg bottom_bar">
                 <a href="index.html" class="navbar-brand branding ps-lg-0 ps-2">
-                    <img src="assets/images/logo/logo.png" alt="logo">
+                    <img src="assets/images/logo/Logojeddah_11zon.png" alt="logo">
                 </a>
                 <div class=" ml-auto d-flex gap-3">
                     <div class="searchaddicon">
